--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   name: guestbook-ui
 spec:
+  type: LoadBalancer
   ports:
-  - type: LoadBalancer
   - port: 80
     targetPort: 80
   selector:
